syntax = "proto3";

package traffic;

// The service definition
service TrafficManagement {
    rpc getTrafficDensity(TrafficDensityRequest) returns (stream TrafficDensityResponse);
}


// Client-1: Server-side gRPC streaming of traffic data

// Message for requesting traffic density data
message TrafficDensityRequest {
    string opName = 1; // unassigned integer of value 1 in first position of message request
}
Â 
// Message for responding with traffic density data
message TrafficDensityResponse {
    uint32 area = 1;
    uint32 noVehicles = 2; // unassigned integer of value 2
    string congestion = 3; // level of congestion
}